nivasa-macros/tests/trybuild/validation_validate_if_invalid_source_type.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct InvalidSourceTypeConditionalDto {
    state: bool,
    #[validate_if(state, "true")]
    #[is_email]
    email: String,
}

fn main() {}
